<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.googlecode</groupId>
  <artifactId>hibernate-audit</artifactId>
  <version>7.4.5.Final</version>
  <packaging>jar</packaging>

  <name>hibernate-audit</name>
  <description>A Hibernate audit framework</description>
  <url>https://github.com/hibernate/hibernate-orm</url>

  <licenses>
    <license>
      <name>GNU General Public License v2</name>
      <url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- The 'main' persistence unit definition, used to persist test data
      and optionally audit data. -->
    <hibernate.dialect>org.hibernate.dialect.Oracle10gDialect</hibernate.dialect>
    <hibernate.connection.driver_class>oracle.jdbc.driver.OracleDriver</hibernate.connection.driver_class>
    <hibernate.connection.url>jdbc:oracle:thin:@localhost:1521:XE</hibernate.connection.url>
    <hibernate.connection.username>hba</hibernate.connection.username>
    <hibernate.connection.password>hba</hibernate.connection.password>

    <hibernate.jdbc.batch_size>10</hibernate.jdbc.batch_size>
    <hibernate.cache.provider_class>org.hibernate.cache.EhCacheProvider</hibernate.cache.provider_class>
    <hibernate.cache.use_second_level_cache>true</hibernate.cache.use_second_level_cache>
    <hibernate.cache.use_query_cache>true</hibernate.cache.use_query_cache>
    <hibernate.cache.use_structured_entries>true</hibernate.cache.use_structured_entries>
    <hibernate.cache.provider_configuration_file_resource_path>ehcache.xml</hibernate.cache.provider_configuration_file_resource_path>

    <hibernate.generate_statistics>true</hibernate.generate_statistics>
    <hibernate.show_sql>true</hibernate.show_sql>
    <hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>

    <version.hibernate>7.4.5.Final</version.hibernate>
    <version.emf>2.38.0</version.emf>
    <version.teneo>2.0.1-v201310012125</version.teneo>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Hibernate -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${version.hibernate}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-jcache</artifactId>
      <version>${version.hibernate}</version>
      <!-- test-only: the library itself needs no cache provider, the host application supplies one -->
      <scope>test</scope>
    </dependency>
    <!-- Ehcache 3 (JCache provider) -->
    <dependency>
      <groupId>org.ehcache</groupId>
      <artifactId>ehcache</artifactId>
      <version>3.10.8</version>
      <!-- test-only: a second JSR-107 CachingProvider breaks hosts that already register one -->
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.glassfish.jaxb</groupId>
          <artifactId>jaxb-runtime</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.glassfish.jaxb</groupId>
          <artifactId>jaxb-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.eclipse.emf</groupId>
      <artifactId>org.eclipse.emf.teneo.hibernate</artifactId>
      <version>${version.teneo}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.emf</groupId>
      <artifactId>org.eclipse.emf.ecore</artifactId>
      <version>${version.emf}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.emf</groupId>
      <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
      <version>${version.emf}</version>
      <scope>test</scope>
    </dependency>
    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.13</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
          <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.3</version>
          <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <!-- Modern compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>17</release>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <!-- Jar plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>

      <!-- Surefire plugin for TestNG -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>

      <!-- Source JAR -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
